# final_project

GUI/: inventor.ui  main.py  monitor.ui  order.ui  signin.ui  test.py  window.ui  window2.ui
map/: center.pgm  center.yaml
pinklab_minibot_robot/: Dockerfile  docker-compose.yml
pinklab_minibot_robot/ai_server/: package.xml  setup.cfg  setup.py
pinklab_minibot_robot/ai_server/ai_server/: ai_main.py  data_handle.py  distance_calculator.py  yolo_loads.py
pinklab_minibot_robot/aruco_detector_pkg/: package.xml  setup.cfg  setup.py
pinklab_minibot_robot/aruco_detector_pkg/aruco_detector_pkg/: aruco_pose_estimate.py  cmd_vel_relay.py  coordinate_transformer.py  pose_to_goal.py  tf_aruco.py
pinklab_minibot_robot/aruco_detector_pkg/calib_data/: MultiMatrix.npz
pinklab_minibot_robot/aruco_detector_pkg/calibration/: camera_calibration.py  capture_calivration_images.py
pinklab_minibot_robot/aruco_detector_pkg/distance_estimate/: distance.py
pinklab_minibot_robot/aruco_detector_pkg/launch/: aruco_cmd_vel_launch.py
pinklab_minibot_robot/cmd_vel_relay_pkg/: package.xml  setup.cfg  setup.py
pinklab_minibot_robot/cmd_vel_relay_pkg/cmd_vel_relay_pkg/: cmd_vel_relay.py
pinklab_minibot_robot/cmd_vel_to_gpio/: CMakeLists.txt  package.xml  setup.py
pinklab_minibot_robot/cmd_vel_to_gpio/launch/: cmd_vel_to_gpio_launch.py
pinklab_minibot_robot/cmd_vel_to_gpio/src/: cmd_vel_to_gpio.cpp
pinklab_minibot_robot/lrobot/: package.xml  setup.cfg  setup.py
pinklab_minibot_robot/lrobot/launch/: lrobot_launch.py
pinklab_minibot_robot/lrobot/lrobot/: poses.json  robot_control.py  ui_node.py
pinklab_minibot_robot/minibot_bringup/: CMakeLists.txt  package.xml
pinklab_minibot_robot/minibot_bringup/config/: v4l2_camera_params.yaml
pinklab_minibot_robot/minibot_bringup/launch/: bringup_robot.launch.py
pinklab_minibot_robot/minibot_description/urdf/: minibot.urdf.xacro
pinklab_minibot_robot/minibot_driver/: package.xml  setup.cfg  setup.py
pinklab_minibot_robot/minibot_driver/minibot_driver/: drive_forward.py
pinklab_minibot_robot/minibot_navigation2/launch/: navigation_launch.py
pinklab_minibot_robot/minibot_navigation2/maps/: main.pgm  main.yaml
pinklab_minibot_robot/minibot_navigation2/params/: nav2_params.yaml
pinklab_minibot_robot/minibot_navigation2/scripts/: smooth_navigation.py
pinklab_minibot_robot/path_planner_pkg/: package.xml  setup.py
pinklab_minibot_robot/path_planner_pkg/config/: dwb_local_planner_params.yaml  pid_params.yaml
pinklab_minibot_robot/path_planner_pkg/launch/: bringup_launch.py
pinklab_minibot_robot/path_planner_pkg/path_planner_pkg/: a_star_planner.py  goal_publisher.py  goal_publisher_with_click.py  navigate_to_pose_client.py  odom_publisher.py  path_planner.py  path_planning_node.py  pid_controller.py  test.py
pinklab_minibot_robot/robot_manage_pkg/: package.xml  setup.cfg  setup.py
pinklab_minibot_robot/robot_manage_pkg/robot_manage_pkg/: recieve_result_state.py
pinklab_minibot_robot/sensor_sender_pkg/: package.xml  setup.cfg  setup.py
pinklab_minibot_robot/sensor_sender_pkg/sensor_sender_pkg/: sensor_sender.py
ydlidar_ros2_driver/src/: ydlidar_ros2_driver_node.cpp
